WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279736
[-webkit-line-clamp] Fix css/css-overflow/line-clamp/webkit-line-clamp-027.html
https://bugs.webkit.org/show_bug.cgi?id=279736
Summary
[-webkit-line-clamp] Fix css/css-overflow/line-clamp/webkit-line-clamp-027.html
alan
Reported
2024-09-15 11:04:56 PDT
ssia
Attachments
Patch
(4.20 KB, patch)
2024-09-15 11:06 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.20 KB, patch)
2024-09-15 14:26 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(5.24 KB, patch)
2024-09-16 09:40 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(5.24 KB, patch)
2024-09-16 11:10 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-09-15 11:06:14 PDT
Created
attachment 472565
[details]
Patch
alan
Comment 2
2024-09-15 14:26:50 PDT
Created
attachment 472569
[details]
Patch
alan
Comment 3
2024-09-16 09:40:25 PDT
Created
attachment 472575
[details]
[fast-cq]Patch
alan
Comment 4
2024-09-16 11:10:15 PDT
Created
attachment 472577
[details]
[fast-cq]Patch
EWS
Comment 5
2024-09-16 13:12:59 PDT
Committed
283720@main
(3e1d7b965161): <
https://commits.webkit.org/283720@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472577
[details]
.
Radar WebKit Bug Importer
Comment 6
2024-09-16 13:13:17 PDT
<
rdar://problem/136098398
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug