[-webkit-line-clamp] Fix css/css-overflow/line-clamp/webkit-line-clamp-027.html https://bugs.webkit.org/show_bug.cgi?id=279736

Reviewed by Antti Koivisto.

Do not attempt to clamp <fieldset> content.

* LayoutTests/TestExpectations:
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/rendering/LineClampUpdater.h:
(WebCore::LineClampUpdater::LineClampUpdater):
(WebCore::LineClampUpdater::~LineClampUpdater):
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::layoutBlock):

Canonical link: https://commits.webkit.org/283720@main